fix: infinite scrollbar effect

--- a/src/components/AppBar/styles.module.scss
+++ b/src/components/AppBar/styles.module.scss
@@ -9,7 +9,6 @@
 }
 
 .horizontalScroll {
-  transform: translateX(100%);
   animation: move 80s linear infinite;
 }
 
